# pierre_mcp_server

./: .dockerignore  .env.example  .envrc.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  check_memory_db_pattern.sh  docker-compose-with-envrc.sh  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  fitness_config.toml  setup.sh  test_config.toml
.github/: FUNDING.yml
scripts/: build.sh  deploy.sh
src/: auth.rs  config.rs  constants.rs  database.rs  health.rs  lib.rs  logging.rs  main.rs  models.rs  oauth2_client.rs  routes.rs
src/config/: environment.rs  fitness_config.rs
src/intelligence/: activity_analyzer.rs  analyzer.rs  goal_engine.rs  insights.rs  location.rs  metrics.rs  mod.rs  performance_analyzer.rs  recommendation_engine.rs  weather.rs
src/mcp/: mod.rs  multitenant.rs  schema.rs
src/providers/: fitbit.rs  garmin.rs  mod.rs  runkeeper.rs  strava.rs
tests/: database_memory_test.rs  end_to_end.rs  mcp_analytics_integration.rs  mcp_server_integration.rs  mcp_tools_unit.rs  multitenant_integration.rs  oauth_e2e_test.rs  oauth_integration.rs  oauth_routes_test.rs  provider_integration.rs
