[package]
name = "pierre_mcp_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Model Context Protocol (MCP) server for fitness data aggregation and analysis"
repository = "https://github.com/jfarcand/pierre_mcp_server"
keywords = ["mcp", "fitness", "strava", "api", "claude"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "pierre_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "pierre-mcp-server"
path = "src/main.rs"

[[bin]]
name = "auth-setup"
path = "src/bin/auth_setup.rs"

[[bin]]
name = "test-oauth"
path = "src/bin/test_oauth.rs"

[[bin]]
name = "test-mcp"
path = "src/bin/test_mcp.rs"

[[bin]]
name = "test-client"
path = "src/bin/test_client.rs"

[[bin]]
name = "test-with-data"
path = "src/bin/test_with_data.rs"

[[bin]]
name = "find-2024-longest-run"
path = "src/bin/find_2024_longest_run.rs"

[[bin]]
name = "find-2025-longest-run"
path = "src/bin/find_2025_longest_run.rs"

[[bin]]
name = "find-consecutive-10k-runs"
path = "src/bin/find_consecutive_10k_runs.rs"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }
urlencoding = "2.1"
sha2 = "0.10"
rand = "0.8"

[dev-dependencies]
mockito = "1.6"
tempfile = "3.20"