[package]
name = "pierre_mcp_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Model Context Protocol (MCP) server for fitness data aggregation and analysis"
repository = "https://github.com/jfarcand/pierre_mcp_server"
keywords = ["mcp", "fitness", "strava", "api", "claude"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "pierre_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "pierre-mcp-server"
path = "src/bin/multitenant_server.rs"

[[bin]]
name = "auth-setup"
path = "src/bin/auth_setup.rs"


[[bin]]
name = "test-with-data"
path = "src/bin/test_with_data.rs"

[[bin]]
name = "find-2024-longest-run"
path = "src/bin/find_2024_longest_run.rs"

[[bin]]
name = "find-2025-longest-run"
path = "src/bin/find_2025_longest_run.rs"

[[bin]]
name = "find-consecutive-10k-runs"
path = "src/bin/find_consecutive_10k_runs.rs"

[[bin]]
name = "test-weather-integration"
path = "src/bin/test_weather_integration.rs"

[[bin]]
name = "test-real-weather"
path = "src/bin/test_real_weather.rs"

[[bin]]
name = "diagnose-weather-api"
path = "src/bin/diagnose_weather_api.rs"

[[bin]]
name = "test-intelligence-for-longest-run"
path = "src/bin/test_intelligence_for_longest_run.rs"

[[bin]]
name = "test-location-intelligence"
path = "src/bin/test_location_intelligence.rs"

[[bin]]
name = "check-longest-run-gps"
path = "src/bin/check_longest_run_gps.rs"

[[bin]]
name = "test-oauth-callback"
path = "src/bin/test_oauth_callback.rs"


[dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2.5"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
urlencoding = "2.1"
sha2 = "0.10"
rand = "0.8"
# Encryption and database support for multi-tenant
ring = "0.17"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
bcrypt = "0.16"
jsonwebtoken = "9.3"
warp = "0.3"
# Pin to compatible version to avoid edition2024 requirement
base64ct = "=1.6.0"

[dev-dependencies]
mockito = "1.6"
tempfile = "3.20"